--- a/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <div class="dropdown-divider"></div>
                     @*<a class="dropdown-item" href="login.html">Logout</a>*@
                     <form method="post" asp-controller="User" asp-action="Logout">
-                        <button type ="submit" class="dropdown-item" value="Logout"></button>
+                        <button type="submit" class="dropdown-item">Logout</button>
                     </form>
                 </div>
             </li>
