--- a/eShopSolution.AdminApp/Views/Login/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/Login/Index.cshtml
@@ -29,6 +29,7 @@
                                 <div class="card-body">
 
                                     <form asp-action="Index" asp-controller="Login" method="post">
+                                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                         <div class="form-group">
                                             <label class="small mb-1" asp-for="UserName">Email</label>
                                             <input class="form-control py-4" asp-for="UserName" type="text" placeholder="Enter email address" />
