--- a/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -5,7 +5,14 @@
     ViewData["Title"] = "User List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section Scripts{ 
+    
+    <script>
+        setTimeout(function (){
+            $('#msgAlert').fadeOut('slow');
+        }, 2000);
+    </script>
+} 
 <div class="container-fluid">
     <h1 class="mt-4">User List</h1>
     <ol class="breadcrumb mb-4">
@@ -16,12 +23,42 @@
         <div class="card-body">
         </div>
     </div>
-    <div class="card mb-4">
+    <div class="card mb-12">
         <div class="card-header">
-            <i class="fas fa-table mr-1"></i>
-            <a class="btn btn-success" asp-action="Create" asp-controller="User">Crete new user</a>
+            <div class="row">
+                <div class="col-md-6 col-xs-12">
+                    <a class="btn btn-success" asp-action="Create" asp-controller="User">Crete new user</a>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <form asp-action="Index" method="get">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <input type="text" value="@ViewBag.keyword" name="keyword" class="form-control" />
+                            </div>
+                            <div class="col-md-4">
+                                <button type="submit" class="btn btn-primary">Search</button>
+                                <button type="button" onclick="window.location.href='/User/Index'" class="btn btn-secondary">Reset</button>
+                            </div>
+                        </div>
+                        
+                        
+                    </form>
+                </div>
+            </div>
+            
         </div>
         <div class="card-body">
+            <div class="row">
+                <div class="col-md-12">
+                    @if (ViewBag.SucessMsg != null)
+                    {
+                        <div id="msgAlert" class="alert alert-success" role="alert">
+                            @ViewBag.SucessMsg
+                        </div>
+                    }
+                </div>
+            </div>
+
             <div class="table-responsive">
                 @*<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">*@
                 <table class="table table-bordered" width="100%" cellspacing="0">
@@ -37,15 +74,15 @@
                         </tr>
                     </thead>
                     @*<tfoot>
-                        <tr>
-                            <th>FirstName</th>
-                            <th>LastName</th>
-                            <th>PhoneNUmber</th>
-                            <th>UserName</th>
-                            <th>Email</th>
-                            <th>Functions</th>
-                        </tr>
-                    </tfoot>*@
+                <tr>
+                    <th>FirstName</th>
+                    <th>LastName</th>
+                    <th>PhoneNUmber</th>
+                    <th>UserName</th>
+                    <th>Email</th>
+                    <th>Functions</th>
+                </tr>
+            </tfoot>*@
                     <tbody>
                         @foreach (var item in Model.Items)
                         {
