--- a/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -108,7 +108,8 @@
                                 <td>
                                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                                    @Html.ActionLink("RoleAssign", "RoleAssign", new { id = item.Id })
                                 </td>
                             </tr>
                         }
