--- a/eShopSolution.AdminApp/Views/Product/Create.cshtml
+++ b/eShopSolution.AdminApp/Views/Product/Create.cshtml
@@ -4,7 +4,32 @@
     ViewData["Title"] = "Create Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section Scripts{
+    <script src="https://cdn.ckeditor.com/ckeditor5/21.0.0/classic/ckeditor.js"></script>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#txtDescription'), {
+                // toolbar: [ 'heading', '|', 'bold', 'italic', 'link' ]
+            })
+            .then(editor => {
+                window.editor = editor;
+            })
+            .catch(err => {
+                console.error(err.stack);
+            });
 
+        ClassicEditor
+            .create(document.querySelector('#txtDetails'), {
+                // toolbar: [ 'heading', '|', 'bold', 'italic', 'link' ]
+            })
+            .then(editor => {
+                window.editor = editor;
+            })
+            .catch(err => {
+                console.error(err.stack);
+            });
+    </script>
+}
 <div class="container-fluid">
     <h1 class="mt-4">Create new Product</h1>
     <ol class="breadcrumb mb-4">
@@ -15,14 +40,14 @@
         <div class="card-body">
         </div>
     </div>
-    <div class="card mb-4">
+    <div class="card mb-6">
         <div class="card-header">
             <i class="fas fa-table mr-1"></i>
             <a class="btn btn-success" asp-action="Index" asp-controller="Product">Back to List</a>
         </div>
         <div class="card-body">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <form asp-action="Create" enctype="multipart/form-data" method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
@@ -47,12 +72,12 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Description" class="control-label"></label>
-                            <textarea asp-for="Description" rows="5" class="form-control" ></textarea>
+                            <textarea id="txtDescription" asp-for="Description" rows="5" class="form-control" ></textarea>
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Details" class="control-label"></label>
-                            <textarea asp-for="Details" rows="5" class="form-control"></textarea>
+                            <textarea id="txtDetails" asp-for="Details" rows="5" class="form-control"></textarea>
                             <span asp-validation-for="Details" class="text-danger"></span>
                         </div>
                         <div class="form-group">
