--- a/eShopSolution.AdminApp/Views/Product/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/Product/Index.cshtml
@@ -32,8 +32,13 @@
                 <div class="col-md-6 col-xs-12">
                     <form asp-action="Index" method="get">
                         <div class="row">
-                            <div class="col-md-8">
+                            <div class="col-md-4">
                                 <input type="text" value="@ViewBag.keyword" name="keyword" class="form-control" />
+                            </div>
+                            <div class="col-md-4">
+                                <select name="categoryId" onchange="this.form.submit()" asp-items="@ViewBag.Categories" class="form-control">
+                                    <option>-- Category --</option>
+                                </select>
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-primary">Search</button>
@@ -99,6 +104,7 @@
                                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                                     @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                                    @Html.ActionLink("Category Assign", "CategoryAssign", new { id = item.Id }) |
                                 </td>
                             </tr>
                         }
